# mma_school_24_neutrinos

./: Dockerfile  README.md  pyproject.toml
notebooks/: 1_Introduction_to_Icecube_Data_Answers.ipynb  2_Introduction_to_Neutrino_Analysis_Answers.ipynb  3_Introduction_to_ZTF_Answers.ipynb  Intro_to_neutrino_likelihood_analysis.ipynb
nuclass/: __init__.py
nuclass/data/: __init__.py
nuclass/data/data_files/: IceCube_Gold_Bronze_Tracks.csv  icecat_cut.csv
solutions/: 1_Introduction_to_Icecube_Data_Answers.ipynb  2_Introduction_to_Neutrino_Analysis_Answers.ipynb  3_Introduction_to_ZTF_Answers.ipynb
